--- a/index.html
+++ b/index.html
@@ -1070,9 +1070,9 @@
          * Fetches details for registered product IDs and displays them as banners.
          * @param {string[]} productIds - An array of registered product ObjectIDs (as strings).
          */
-         async function displayRegisteredProducts(productIds) {
-            const container = document.getElementById('dashboard-registered-products');
-            const loadingIndicator = document.getElementById('loading-registered-products');
+         function displayRegisteredProducts(productsToDisplay) {
+            console.log('[displayRegisteredProducts] Called with:', productsToDisplay); // <-- ADD LOG
+            const container = document.getElementById('dashboard-my-products-list');
             if (!container || !loadingIndicator) {
                  console.error("Registered products container or loading indicator not found.");
                  return;
@@ -1457,53 +1457,29 @@
                  console.log(`[navigateTo] Fetching products for #products view.`);
                  fetchProducts();
             // Inside navigateTo function...
-            } else if (baseHash === '#dashboard' && currentUser?.logged_in) {
-                 console.log(`[navigateTo] Loading dashboard data. User:`, currentUser);
-                 displayUserRoles(currentUser.roles); // Display roles
+        } else if (baseHash === '#dashboard' && currentUser?.logged_in) {
+            console.log(`[navigateTo] Loading dashboard data. User:`, currentUser);
+            displayUserRoles(currentUser.roles); // Display roles
 
-                 // --- MODIFY THIS BLOCK ---
-                 // Get detailed registration info from user object
-                 const myRegisteredDetails = currentUser.registered_product_details || [];
+            const myRegisteredDetails = currentUser.registered_product_details || [];
+            console.log('[navigateTo Dashboard] myRegisteredDetails:', myRegisteredDetails); // <-- ADD LOG
 
-                 // Fetch all products to get full details like name, thumbnail
-                 fetchAllProducts().then(allProducts => {
-                     if (allProducts) {
-                         // Map through all products and add order_id if the user is registered
-                         const productsToDisplay = allProducts
-                             .map(p => {
-                                 // Find the corresponding registration detail for this product
-                                 const registration = myRegisteredDetails.find(reg => reg.product_id === p._id);
-                                 // If found, return the product object merged with the order_id
-                                 // Use the product name from the registration if needed, or from the product itself
-                                 return registration ? {
-                                     ...p, // Spread existing product details (name, price, thumbnail etc.)
-                                     order_id: registration.order_id, // Add the order_id from the registration
-                                     product_name: registration.product_name || p.name // Optionally use name from registration
-                                     } : null; // Return null if user hasn't registered this product
-                             })
-                             .filter(p => p !== null); // Remove null entries (non-registered products)
+            fetchAllProducts().then(allProducts => {
+                console.log('[navigateTo Dashboard] allProducts:', allProducts); // <-- ADD LOG
+                if (allProducts) {
+                    const productsToDisplay = allProducts
+                        .map(p => {
+                            const registration = myRegisteredDetails.find(reg => reg.product_id === p._id);
+                            return registration ? { ...p, order_id: registration.order_id, product_name: registration.product_name || p.name } : null;
+                        })
+                        .filter(p => p !== null);
 
-                         // Pass the combined & filtered data to the display function
-                         displayRegisteredProducts(productsToDisplay);
-                     } else {
-                         // Handle case where fetching all products failed
-                         displayRegisteredProducts(null); // Pass null to indicate error
-                     }
-                 });
-                 // --- END MODIFIED BLOCK ---
-
-                 if (currentUser.is_moderator === true) {
-                     console.log(`[navigateTo] User is moderator, loading admin data.`);
-                     loadAdminDashboardData();
-                 } else {
-                     console.log(`[navigateTo] User is NOT moderator, skipping admin data load.`);
-                 }
-            }
-            // ... rest of navigateTo function
-            // ... rest of navigateTo function
-
-            // Ensure header UI is up-to-date
-            updateHeaderUI(currentUser);
+                    console.log('[navigateTo Dashboard] productsToDisplay:', productsToDisplay); // <-- ADD LOG
+                    displayRegisteredProducts(productsToDisplay); // Pass filtered data
+                } else {
+                    displayRegisteredProducts(null);
+                }
+            });
         }
 
         /**
