--- a/index.html
+++ b/index.html
@@ -379,6 +379,14 @@
                     <option value="price_desc">Sort by Price (High to Low)</option>
                     </select>
             </div>
+            <div class="w-full md:w-auto">
+                <select id="product-tag-filter" class="w-full md:w-auto bg-slate-700 border border-slate-600 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                    <option value="all" selected>Filter by Tag (All)</option>
+                    <option value="SOFTWARE">Software</option>
+                    <option value="ALL IN ONE">All In One</option>
+                    <option value="FIRMWARE">Firmware</option>
+                    </select>
+            </div>
         </div>
 
         <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
