--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 </button>
             </div>
             
-            <div id="admin-product-context-menu" class="absolute bg-slate-700 border border-slate-600 rounded-md shadow-lg py-1 text-sm text-white z-50 hidden">
+            <div id="admin-product-context-menu" class="absolute bg-slate-700 border border-slate-600 rounded-md shadow-lg py-1 text-sm text-white z-50 hidden lg:col-span-3">
                 <button class="context-menu-item edit" id="context-edit-product">Edit Product</button>
                 <button class="context-menu-item delete" id="context-delete-admin-product">Delete Product</button>
             </div>
